--- a/Zin_kitchen_for_16.html
+++ b/Zin_kitchen_for_16.html
@@ -13,7 +13,7 @@
 <body>
     <main>
         <div class="about">
-            <a href="./сайт для Сони.html" class="about">
+            <a href="./index.html" class="about">
                 <p>Зин кухня на 16</p>
                 <p class="add-about">Аппликация, графика</p>
             </a>
