--- a/calendar.html
+++ b/calendar.html
@@ -14,7 +14,7 @@
     <main>
         <div class="container">
             <div class="about">
-                <a href="./сайт для Сони.html" class="about">
+                <a href="./index.html" class="about">
                     <p>Works</p>
                 </a>
                 <a href="" class="download">
