--- a/about.html
+++ b/about.html
@@ -8,14 +8,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="C:\Users\russa\Desktop\Проекты HTML CSS\Сайт для Сони\about.css">
+    <link rel="stylesheet" href="./about.css">
 </head>
 <body>
     <main>
         <div class="container">
-            <a href="C:\Users\russa\Desktop\Проекты HTML CSS\Сайт для Сони\Сайт для Сони.html" class="logo">work</a>
+            <a href="./index.html" class="logo">Works</a>
             <p class="about">Привет, я Соня! Занимаюсь графическим дизайном и иллюстрацией. к каждому проекту подходят с типографической формой 
                 и буквами, играющими ключевую роль в создании симпатичного, но в то же время тонко привлекательного объекта. Отдаю предпочтение таким проектам</p>
+            <p class="contacts">contacts</p>
             <p class="email">e-mail: sofia.khohlova@yandex.ru</p>
             <p class="telegram">tg: @sonahoh</p>
             <p class="instagram">inst: @soony.a</p>
