--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
                     instagram.com/soony.a</p>
                 </a>
             </div>
-            <a href="" class="font-SITAL object">
+            <a href="./sital.html" class="font-SITAL object">
                 <img src="https://s3-alpha-sig.figma.com/img/12b5/a200/7676399526d5b3498a880715cc5e8720?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=ccFQWnaMB1Qv~fsyL2j08siLqZq655uQvSFGcxr58P8GRW9HZE4oBcd~3q8W7kzCchKIwPBlE9C8dMwvf52eLB~rb-f7vh8H2GUGEBpOkaLM3mtjbKDZmiEzp3RvhkRyd83tQbzuqetYqN0x~YdXl~TDK5cRVBG3ndO-cT6ZqtCqAZtyX-t8tA4D8PMitvO9yl97vSLSPb~ttXICgF82uOVG8dAwnfcZ-sN6s3-BklfySQSqePctWWaRcJvY7ulx6R1SJ6PDe5BoLUDZ95SGNqC~PGHypRWAZNCLSd8W4Lyic65NAXEF-3aqPa~qTdnCZNiENcW-MIWd8P2QWccWEg__">
             </a>
-            <a href="" class="calendar-WAP object">
+            <a href="./calendar.html" class="calendar-WAP object">
                 <img src="https://s3-alpha-sig.figma.com/img/22e6/7065/1bf641e9229130b6ad62175026f73259?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=hABUiGZXaymfTNHLEcdYa9aVGm~ZdhjWc7-Qod85BDlWv1~QUJ089wKmypGoGrPMQi11fK2AWa6YY4-vx3D70pcnsxI-Hd3vvksJG0KMajoc4ZWVXEhMJbWij96CrJ~9anlJAd7CPnbSSTFw5wBehhZs-zngZPaMIpzKuRXoCu8mlMS2inP8fUnFlOCl8nQ3h8tanTgaRSferUrQuWBLk5P-vKSGtdeQev89Vw1XbXjn5DJA~0v69vzMXmQrGDtwaJIa~YS1xE2qJqUQeqGlqu9OtuYlEkNWb9mjfFjRwFBM6XlgVStdymSnek2aBBGLMAnWEOAk1JE-stur0xsUSg__">
             </a>
             <a href="./fighting_animals.html" class="fighting-animals object">
                 <img src="https://s3-alpha-sig.figma.com/img/561b/f88e/bcb28273feb76678828c0afa4ee1dfbf?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=C9fAWmHBLVbP~UAhvqAOhoKLwYnWmVRoxzs-ZhNvYdqaPdsgyLoPxQVwA-4n6nCmsa-dLDA6x52gF-zCKAxYqmibkrCIwBdJ8L79COWAIj6cpc36YyW5A5VwnumdR0yHGchDjXn8xIwR5bh~hRPkqYMIlp12oJWZ4wA7D1jvcyOht6dI~XqrDkvfzCEEnqkRCHrfkNBfhZ3YrVB0qli~~xbk3Z3b4Ob6j3TekEYBmKdu5hubirIeSPAalbTYQvrsq5qmPLY82ag3flR09K8Lh8xKfyQQVE2C0gJilg4In2r8oJnNa~PXubKBic1IxLGqHaTgXvxX9unBImwhdguITA__">
             </a>
-            <a href="" class="poster-kebabs-flowers-fireworks object">
+            <a href="./kebabs.html" class="poster-kebabs-flowers-fireworks object">
                 <img src="https://s3-alpha-sig.figma.com/img/f79f/aa58/ec6d427cdeb8d9fa224df42fe183a22b?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=On3jL5WeZ7NUkiF~B4glW~Iqv-tDph9Y1Ij6PjXq7VwtOLtvyXBZTBOkHNy715RSVkWEibAL7-Xr0E~cP-8VijNQZpuGAGCPTHyq0NP8B9ARzC3V8JXmSypJuG0dQAcgmCzvsq9RObakUz2-MtKzvVfgz4SrXJR54uSKFIcr29YzW9rih6ud52vjozF2B5ru4XjM8F5q3~kAR-LeR4-fJ3n7dDBRSUvV4WrWHLOiVe~6qg-lO0285h9eIoPx~BwhPZzRmRosSBaAhTl7z493CrvCZv9DhUeba75H2aKv4tyEkJ5tGE-PXrBJs4lzb2Bkh00gpFrxRzSuO44f6Sk0Lg__">
             </a>
             <a href="./Zin_kitchen_for_16.html" class="Zin-kitchen-for-16 object">
