--- a/calendar.html
+++ b/calendar.html
@@ -18,7 +18,8 @@
                     <p>Works</p>
                 </a>
                 <a href="" class="download">
-                    <p>WAP (weather and print), 2023. А2, silkscreen printing</p>
+                    <p><i>WAP (weather and print)</i>, 2023. А2,
+                        <br> silkscreen printing</p>
                 </a>
             </div>
             <div class="objects">
