--- a/fighting_animals.html
+++ b/fighting_animals.html
@@ -15,10 +15,10 @@
         <div class="container">
             <div class="about">
                 <a href="./index.html" class="about">
-                    <p>Инфографика про боевых животных</p>
+                    <p>Works</p>
                 </a>
                 <a href="" class="download">
-                    <p>Скачать PDF</p>
+                    <p><i>War animals</i>, 2023</p>
                 </a>
             </div>
             <div class="objects">
