--- a/sital.html
+++ b/sital.html
@@ -18,7 +18,7 @@
                     <p>Works</p>
                 </a>
                 <a href="" class="download">
-                    <p>Sital, 2023. Download</p>
+                    <p><i>Sital</i>, 2023. Download</p>
                 </a>
             </div>
                 
