--- a/kebabs.html
+++ b/kebabs.html
@@ -18,7 +18,7 @@
                     <p>Works</p>
                 </a>
                 <a href="" class="download">
-                    <p>Kebabs, flowers, fireworks, 2023. А2</p>
+                    <p><i>Kebabs, flowers, fireworks</i>, 2023. А2</p>
                 </a>
             </div>
             <div class="objects">
