--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <main>
         <div class="container">
-            <div class="about">
-                <a href="./about.html" class="about">
+            <div class="about1">
+                <a class="about">
                     <p>Sofia Khokhlova, student at HSE Art and 
                     Design School, Moscow (Russia).
                     Sofia.khohlova@yandex.ru., t.me/sonahoh,
@@ -40,7 +40,7 @@
                 <img src="https://s3-alpha-sig.figma.com/img/f67a/1ed6/34a00b9afa879baff2d7c6a2d746fdfa?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=A78fhv2s6Nkk2ynaJoaTC1ccbnd3Mc9jxbM6BNy11sQxJvgHO24p5k3FPaycNzjKaLZ93uXYNf5psmybODOscczIiF94JseSOV2XV97x35SmNPk0EDX0DCLc8XntuUWgWCR6Vy7codcNIuSho3UNk4MQmwb6oKnNkxlg9QyxrtK42gjlyWwgO4ICdA9gLQhYTG1JddtCION4Qj8slJj6G-eoaQjRbae0q9nsWavxEK99gnY5-vtvmEgU2yySw66MPmFgbntAwisLh4GDKJcqbv9qSytQqgMEQvn6Z8dt1T7rSwmUPm1wSj~VCjT3bmRIfJSF5uyfFPq8iopcdzfEow__">
             </a>
             <a href="" class="game-diagrams object">
-                <img src="https://s3-alpha-sig.figma.com/img/a0b2/3465/2ab5c17ed69f3af095caeb9abc144bed?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=B6sp8GmH9XHHtzKIMDOhTqwN~xM49re4BlG6vR0Y9IRlOFtrx9NTQC1Vosy-n0Bjc-iBoXKW2-U7YFOmKVeWb3QsWidsfRaWr-nj9RD7uxjUgi4CPWADFp4KS~rOVCSILpENM-mRu3JvrsCEGSPV9fUWzX4ngbebP4ygE~cGXaEgEH37-QEl2L4B-qvXBZYZ2Y~J931qU~4g-IgIUhdZqRYz-~1PaOIod2SdtCVaht-0PXuy9GLoxKowV~PrcpIw9ZICDzluQsgaPpPXQIijLqwtfXuIreYY1XE25ZvoIUMKKkZS9aBW0j~flHKmogyaLMNO9x2UxQbl-uoxDOYohw__">
+                <img src="https://s3-alpha-sig.figma.com/img/6166/3adf/3ce266ae594cf7ba53f3aeb39d53c64c?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=HP2rpdBYG~jfYuv3Lva7DTJCTv66A5Vx78HXJ4~JVpREOv~DXryshohpgjdZLaEVXB1a4AB5MFP1oPbAM7HK~XIJvKCz84QIsw39-FxX5TYmT4LPYlro-MIa2WPxCltH9Y3i~jRHfXBA8Apjy3lpLw6YbI3zy8L-1G9EEreWRyKrR426o7UfQ2kgeUswyv4lxTQBBPCFALeE4i668aG8BR7zz94lz1N5RTxonPcLwOJ7j6IM6LoacdPXs44HKY6~lPLIR0WgVtQd4x2QQ1BVfeTZYk2OBfADYQzVZz1U5gL2lLF8pdP0pE-r0HWu-tFUH8n-rQaMyGGTss~NQxe6Zg__">
             </a>
             <a href="" class="visual-research object">
                 <img src="https://s3-alpha-sig.figma.com/img/cf28/7dc7/40c018b8c9f0cc5c89d35eae052fa8c3?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=bF9j2Om7Ijy6uYFmnasbcwDcdZo6Be7usQnSU2P3n03Beo-~KpzRPnC4Yrdr8-EcwEcy8ursVMzFtOtT01FqOUInmj4O8mv3P3s6oIKEj-YNAzGsoTtLOVww50SeW1GeSF5CcVvmg4d0EAjT-coljiFG-In59vBZAturR5htEpydPs6Aea-0e8olou-rpMNxL8ixDZfkaSLjXU7JLMLOqZqOOasoek44PqYLTNqEb-76Y0UZ~tlffhDqcIhTN2kBAkiOLd52v2xBt~MTV1stZs1KbR7XOoumiloD6OJ03XwZnaFKJ34GQrgQlHc6y~k7V-hwM1cl-UdGaE3rZwu7pQ__">
