--- a/kebabs.html
+++ b/kebabs.html
@@ -13,12 +13,12 @@
 <body>
     <main>
         <div class="container">
-            <div class="about">
+            <div class="about1">
                 <a href="./index.html" class="about">
                     <p>Works</p>
                 </a>
-                <a href="" class="download">
-                    <p><i>Kebabs, flowers, fireworks</i>, 2023. А2</p>
+                <a class="download">
+                    <p><br/><i>Kebabs, flowers, fireworks</i>, 2023. А2</p>
                 </a>
             </div>
             <div class="objects">
