--- a/sital.html
+++ b/sital.html
@@ -13,17 +13,17 @@
 <body>
     <main>
         <div class="container">
-            <div class="about">
+            <div class="about1">
                 <a href="./index.html" class="about">
                     <p>Works</p>
                 </a>
                 <a href="" class="download">
-                    <p><i>Sital</i>, 2023. Download</p>
+                    <p><br/><i>Sital</i>, 2023. Download</p>
                 </a>
             </div>
                 
             <div class="one object">
-                <img src="https://s3-alpha-sig.figma.com/img/948a/366b/3f45cef2167675595419ecb5eba82185?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=p19Hwt1EYEX5U761vMhj4g9dqni-bz2RzYxeFXTcWf6W5cQ5Nl40g5JitUsBbkd7vXPDwl~m4w7PmIttWhvtZHO0svTJV5SawZHYg7qOT1PSSga8wuqeFacpoy8LwfqTQi4RgNSJBgChkcc7UksfAsOx~HmLaMts7JRwA70YCKfc22bwBekdBD-JR-iCFxfFi2PbhNbPP41h26b9sxTkZ9y5D~3AOBMsIRwazsb7IvvOyA3ZW96siUggSHrCu0xg0nmyEii71RSNJG9IeFYl6~7jloa168IC4NnztVo9D85E~loJ1RJBuX9HjZ~1vAR7pqJ~04yKx662Mt8aorx5SQ__">
+                <img src="https://s3-alpha-sig.figma.com/img/0633/1fc6/d6f2d7de998af7712204dafe56d001f4?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=JF6dBgj7gtv-czGsHCNkiW3PdG28H3X06Nmt1iBjdnzDrX46ggCT-a25dneH9MEAtFr8sxQpYcTVlHIi8TnUjTjr79NLPtnXoieCMi9mHGJMwR8lh3Ag3Xlt72BPU52Q1D8I4QgL5tbbM-xLVbA6VA5hMIP6jAGjguCVXwF5llt~Z2-i3s6HmMDCP5QD1Wur8ny8UokwE68m0CieWuyfRhB2k6mmdvtA4qHdRW5qhTwV1BYJYhsYBZJirQeWdD0lMvGnMjzU0FrcynhnKdwswYFWBzIJU0Ts2zVyGwcHgRxnwJXkYzYfldl9bXJc2epJjJAuiyUp40OAEP9DrAdB9w__">
             </div>
             <div class="two object">
                 <img src="https://s3-alpha-sig.figma.com/img/70ae/bab6/6c808db03264d02f8f28474fe408f856?Expires=1712534400&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=DwzYyZ4LR2SyqjQKzTpp0ccC7RpUy1GKjTPvoi-SWivw4iQqTjW~RuBTWetq9unleL-ZraW5p2BH2vHQNevC5NMPIqa6XVjkPmWI5TvdbD2ecbDZxipTKnYPVll9DXx8kwq5Mh8TTPiR46MybYBiURYaY9tdkL5FQj5gndXV~hdWnqoPrb5bMW2byQyiXHTWp7s6~Els68B9iaAJWjmBXZeBcS8k4YsY~wtAVdraIl-FEkvlIFFhoZ8CpGSN-XJ1jUwHDniVwFW2E60F29OvSSCYnGYkjUKlXGA6QEdsNXOVsLNKaO2AxI3wOJwwN037Gpx-EWYXgQPJHCuIA3HAkw__">
