--- a/fighting_animals.html
+++ b/fighting_animals.html
@@ -13,12 +13,12 @@
 <body>
     <main>
         <div class="container">
-            <div class="about">
+            <div class="about1">
                 <a href="./index.html" class="about">
                     <p>Works</p>
                 </a>
-                <a href="" class="download">
-                    <p><i>War animals</i>, 2023</p>
+                <a class="download">
+                    <p><br/><i>War animals</i>, 2023</p>
                 </a>
             </div>
             <div class="objects">
