--- a/sital.html
+++ b/sital.html
@@ -17,8 +17,8 @@
                 <a href="./index.html" class="about">
                     <p>Works</p>
                 </a>
-                <a href="" class="download">
-                    <p><br/><i>Sital</i>, 2023. Download</p>
+                <a class="download">
+                    <p><br/><i>Sital</i>, 2023</p>
                 </a>
             </div>
                 
